fix: resizing window decoration behavior (nowrap, one line, no overlap)

--- a/styles/kite-decoration.less
+++ b/styles/kite-decoration.less
@@ -10,6 +10,7 @@
     opacity: 0.6;
     display:flex;
     justify-content: space-between;
+    flex-wrap: nowrap;
   }
 
   kite-logo {
@@ -24,5 +25,6 @@
   .text {
     color: @blue-color;
     margin-left: 0.4rem;
+    white-space: nowrap;
   }
 }
